--- a/style.css
+++ b/style.css
@@ -1,4 +1,52 @@
-body{
-    background-color: black;
-    color: aliceblue;
+header.masthead {
+    text-align: center;
+    color: white;
+    background-image: url(img/conference.jpg);
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center;
+    background-size: cover;
+}
+
+header.masthead .intro-text{
+    padding-top: 200px;
+    padding-bottom: 100px;
+}
+
+header.masthead .intro-text .intro-lead-in{
+    font-size: 22px;
+    font-style: italic;
+    line-height: 22px;
+    margin-bottom: 10px;
+    font-family: 'Droid Serif','Helvetica Neue', Helvetica, sans-serif;
+}
+
+header.masthead .intro-text .intro-heading {
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 50px;
+    margin-bottom: 30px;
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.btn{
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, sans-serif;
+    font-weight: 600;
+}
+
+.btn-xl{
+    font-size: 16px;
+    padding: 10px 20px;
+}
+
+.btn-primary{
+    background-color: #428bca;
+    border-color: #428bca;
+    margin-bottom: 50px;
+}
+
+.btn-primary:active, .btn-primary:focus, .btn-primary:hover{
+    background-color: #3677b1 !important;
+    border-color: #3677b1 !important;
+    color: white;
 }
