--- a/style.css
+++ b/style.css
@@ -74,3 +74,19 @@ section h3.section-subheading{
 .topic-heading{
     margin: 15px 0;
 }
+
+#speakers{
+    background-color: rgb(232, 240, 237);
+}
+
+.team-member h4{
+    margin: 20px 0 0;
+}
+
+.list-inline-item{
+    margin: 0 10px;
+}
+
+#renderSpeakers{
+    margin-bottom: 40px;
+}
